# mneme

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IDEAS.md  INSTALL.md  LICENSE  NEXT-PATH.md  README.md  ROADMAP.md  SECURITY.md  VERIFIED.md  deny.toml  marketplace.json
.cargo/: config.toml
.github/workflows/: ci.yml  multi-arch-release.yml  release.yml
benchmarks/: BENCHMARKS.md
brain/: Cargo.toml
brain/src/: call_resolver.rs  concept.rs  conventions.rs  embed_store.rs  embeddings.rs  federated.rs  ledger.rs  leiden.rs  lib.rs  llm.rs  main.rs  reranker.rs  retrieve.rs  summarize.rs  tests.rs  wiki.rs  worker.rs
cli/: Cargo.toml
cli/src/: build_heartbeat.rs  build_lock.rs  hook_payload.rs  hook_writer.rs  lib.rs  main.rs  tests.rs
cli/src/commands/: abort.rs  audit.rs  build.rs  cache.rs  daemon.rs  doctor.rs  inject.rs  install.rs  mod.rs  models.rs  pre_tool.rs  rebuild.rs  recall.rs  register_mcp.rs  self_update.rs  session_end.rs  shard_summary.rs  uninstall.rs  update.rs
cli/tests/: build_heartbeat_integration.rs  chaos_tests.rs  hook_no_autospawn.rs  install_writes_standalone_uninstaller.rs
common/: Cargo.toml
common/src/: response.rs  time.rs  worker_ipc.rs
common/tests/: mneme_home_override.rs
docs/: INSTALL.md  REMAINING_WORK.md  architecture.md  dev-setup.md  env-vars.md  faq.md  index.html  mcp-tools.md
docs/benchmarks/mcp-bench-2026-05-02/: README.md  aggregate-results.ps1  bench-launcher.ps1  crg-mcp-wrapper.cmd  final-table.ps1  graphify-mcp-wrapper.cmd  ground-truth.md  mcp-crg-only.json  mcp-graphify-only.json  mcp-mneme-only.json  mcp-treesitter-only.json  mneme-mcp-wrapper.cmd  queries.json  run-all-bench.ps1  run-query.ps1  score-result.ps1  treesitter-mcp-wrapper.cmd
docs/benchmarks/mcp-bench-2026-05-02/results/: code-review-graph-Q1.json  code-review-graph-Q2.json  code-review-graph-Q2.prompt.txt  graphify-Q1.prompt.txt  graphify-Q2.json  graphify-Q2.prompt.txt  mneme-Q1.json  mneme-Q2.json  mneme-Q3.json  mneme-Q4.json  mneme-Q4.prompt.txt  mneme-Q5.json  mneme-fix-Q1.json  mneme-fix-Q2.json  mneme-fix-Q3.json  mneme-fix-Q3.prompt.txt  mneme-fix-Q4.json  summary.json  tree-sitter-Q1.json  tree-sitter-Q2.json  tree-sitter-Q3.json  tree-sitter-Q4.json  tree-sitter-Q4.prompt.txt  tree-sitter-Q5.json  tree-sitter-Q5.prompt.txt
docs/benchmarks/mcp-bench-2026-05-02/results-final/: code-review-graph-Q3.json  code-review-graph-Q3.prompt.txt  code-review-graph-Q4.json  code-review-graph-Q4.prompt.txt  code-review-graph-Q5.json  graphify-Q1.json  graphify-Q4.json  graphify-Q5.json  mneme-Q1.json  mneme-Q2.json  mneme-Q3.json  mneme-Q4.json  mneme-Q5.json  summary.json  tree-sitter-Q1.json  tree-sitter-Q5.json  tree-sitter-Q5.prompt.txt
livebus/src/: bus.rs  ipc_input.rs  lib.rs  subscriber.rs
mcp/: package.json  tsconfig.json
mcp/src/: compaction_guard.ts  db.ts  index.ts  server.ts  store.ts  transcript_watcher.ts  types.ts
mcp/src/hooks/: turn_end.ts
mcp/src/tools/: context.ts  file_intent.ts  health.ts  index.ts  recall_conversation.ts  refactor_apply.ts  step_complete.ts  step_verify.ts  why.ts
mcp/src/tools/__tests__/: projectIdForPath.test.ts
mcp/test/: ipc-bug-k-pipe-reresolve.test.ts  tools-smoke.test.ts
md-ingest/: Cargo.toml
multimodal-bridge/: Cargo.toml
multimodal-bridge/src/: image.rs  lib.rs  markdown.rs  pdf.rs  registry.rs  types.rs  video.rs
parsers/: Cargo.toml
parsers/src/: extractor.rs  incremental.rs  main.rs  parser_pool.rs  tests.rs  worker.rs
pip/: .gitignore  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml
pip/src/mneme_mcp/: __init__.py  bootstrap.py  cli.py
pip/tests/: test_cli.py
plugin/: CLAUDE.md  marketplace.json  plugin.json
plugin/.cursor/rules/: mneme.mdc
plugin/skills/: mneme-audit.md  mneme-query.md  mneme-resume.md
plugin/skills/fireworks-charts/: SKILL.md
plugin/skills/fireworks-devops/: SKILL.md
plugin/skills/mneme-codewords/: SKILL.md
release/: bootstrap-install.ps1  install-linux.sh  install-mac.sh  lib-common.sh
scanners/src/: main.rs  scanner.rs  tests.rs
scanners/src/scanners/: architecture.rs  drift.rs  markdown_drift.rs  mod.rs  perf.rs  secrets.rs  security.rs  types_ts.rs
scripts/: check-home-dir-discipline.sh  gen-release-checksums.ps1  insert_section.py  install.ps1  install.sh  remove_duplicate_section.py
scripts/test/: stage-final-zip.ps1  stage-release-archive.sh  stage-release-zip.ps1
store/: Cargo.toml
store/src/: inject.rs  query.rs  schema.rs
supervisor/: Cargo.toml
supervisor/src/: api_graph.rs  config.rs  health.rs  ipc.rs  lib.rs  main.rs  manager.rs  tests.rs  watchdog.rs  watcher.rs
vision/: index.html  server.ts
vision/server/: shard.ts
vision/src/: App.tsx  livebus.ts  projectSelection.test.ts  projectSelection.ts  store.test.ts  styles.css
vision/src/api/: graph.test.ts  projects.ts
vision/src/command-center/: CommandCenter.tsx
vision/src/components/: ErrorBoundary.tsx  FilterBar.tsx  Legend.tsx  Minimap.tsx  OnboardingHint.tsx  SidePanel.tsx  TimelineScrubber.tsx
vision/src/views/: ForceGalaxy.tsx  ProjectGalaxy3D.tsx  Sunburst.tsx
vision/tauri/: Cargo.toml  tauri.conf.json
vscode/: package-lock.json  package.json
vscode/src/test/: parse.test.ts
winget/Anish/Mneme/0.3.2/: Anish.Mneme.installer.yaml
winget/Anish/Mnemeos/0.3.2/: Anish.Mnemeos.installer.yaml  Anish.Mnemeos.locale.en-US.yaml  Anish.Mnemeos.yaml
