[workspace]
resolver = "2"
members = [
    "common",
    "supervisor",
    "store",
    "parsers",
    "scanners",
    "livebus",
    "multimodal-bridge",
    "cli",
    "md-ingest",

    "brain",
    "benchmarks",
]
exclude = [
    "vision/tauri",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
authors = ["Anish Trivedi", "Kruti Trivedi"]
repository = "https://github.com/omanishay-cyber/mneme"
homepage = "https://github.com/omanishay-cyber/mneme"
description = "Mneme — the persistent memory layer for AI coding. Survives context compaction, 100% local."

[workspace.dependencies]
# Internal crates
mneme-common = { path = "common", version = "0.3.2" }
mneme-store = { path = "store", version = "0.3.2" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-broadcast = "0.7"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "blob", "functions", "serde_json", "chrono", "backup", "hooks"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Tree-sitter — bumped to 0.25 to support ABI v15 grammars (C# 0.23.x, Swift 0.7,
# Zig 1.1, Solidity 1.2, etc.) while remaining backward-compatible with older
# ABI v14 grammars via the `tree-sitter-language` bridge crate.
tree-sitter = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IPC
interprocess = { version = "2.2", features = ["tokio"] }

# Process supervision
sysinfo = "0.32"

# HTTP / live bus
axum = "0.7"

# Filesystem watching
notify = "6.1"

# Path utilities
dirs = "5.0"
walkdir = "2.5"
dunce = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"

# UUID
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Embeddings (ONNX, optional per crate).
#
# `api-24` is required: ort 2.0.0-rc.12's `ep/vitis.rs` references
# `SessionOptionsAppendExecutionProvider_VitisAI`, a symbol that only
# exists in ort-sys's api-24 surface. Without it, compilation fails with
# E0609 "no field on type `&'static OrtApi`".
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "api-24"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Graph ops
petgraph = "0.6"

# Regex
regex = "1.11"
once_cell = "1.20"

# Misc
bytes = "1.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
