[package]
name = "mneme-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types for the mneme workspace"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
blake3.workspace = true
uuid.workspace = true
dirs.workspace = true
dunce.workspace = true
tracing.workspace = true
rusqlite.workspace = true

# Supervisor-client helper (`worker_ipc` module) — lets worker binaries
# report `WorkerCompleteJob` messages back to the supervisor over the
# same IPC transport the CLI uses. Kept async + tokio-based because
# every worker already runs a tokio runtime.
tokio.workspace = true
interprocess.workspace = true
